<resources>
    <string name="app_name">World Quiz</string>
    <string name="facebook_app_id" translatable="false">405704199633170</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb405704199633170</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="scratch_my" translatable="false">ScratchMy</string>
    <string name="map">Map</string>
    <string name="news">News</string>
    <string name="my_map">My Map</string>
    <string name="friends">Friends</string>
    <string name="top_travelers">Top travelers</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="undo">Undo</string>
    <string name="_location_will_be_added">Location %s will be added to your map</string>
    <string name="trip_name">trip name</string>
    <string name="trip_description">trip description</string>
    <string name="trip_country">trip country</string>
    <string name="ok">OK</string>
    <string name="visited">visited %s</string>
    <string name="is_planning_a_trip_to">is planning a trip to %s</string>
    <string name="add_native_country">added %s as a native country</string>
    <string name="add_new_user">add new user</string>
    <string name="added_comment_to_your_trip">added a comment to your trip to %s</string>
    <string name="add_new_visit">visited %s</string>
    <string name="add_new_like">add like for your trip to %s</string>
    <string name="modify_visit">edit his visit to %s</string>
    <string name="add_visit_like">liked your visit to %s</string>
    <string name="lives_in">lives in %s</string>
    <string name="add_comment_like" formatted="false">liked your comment to %s\'s trip to %s</string>
    <string name="mentioned_you_in_comments" formatted="false">mentioned you in %s trip to %s</string>
    <string name="general_notification">general notification</string>
    <string name="added_to_favorites">added %s to favourites</string>
    <string name="failed_to_load_information">Failed to load information</string>
    <string name="not_found">Nothing found by your request</string>
    <string name="nothing_to_load">You do not have any updates yet</string>
    <string name="there_are_no_new_notification">There are no new notification</string>
    <string name="name">Name</string>
    <string name="country">Country</string>
    <string name="visited_countries">Visited countries</string>
    <string name="visits">Visits</string>
    <string name="slash_tag">#</string>
    <string name="loading">Loading</string>
    <string name="traveling_since">Traveling since</string>
    <string name="try_again">Try again</string>
    <string name="save">Save</string>
    <string name="mandatory_fields_indicated_with_star">* mandatory fields are indicated with a star</string>
    <string name="quiz">Quiz</string>
    <string name="learn_and_play">Learn and play</string>
    <string name="discover">Discover</string>
    <string name="points">points:</string>
    <string name="what_is_the_capital_of">What is the capital of %s ?</string>
    <string name="what_is_the_population_of">What is the population of %s ?</string>
    <string name="in_what_continent_situated">In what continent %s is situated ?</string>
    <string name="is_the_capital_of">%s is the capital of ?</string>
    <string name="area_of_is">What is the area of %s ?</string>
    <string name="you_failed_with_points">You failed with %d points</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="play">Play</string>
    <string name="visited_country">Visited country</string>
    <string name="planing_to_visit">Planing to visit</string>
    <string name="native_country">Native country</string>
    <string name="living_in">Living in</string>
    <string name="country_added">%s was added</string>
    <string name="please_select_county">Please select country</string>
    <string name="delete">Delete</string>
    <string name="capital">Capital</string>
    <string name="population">Population</string>
    <string name="area">Area</string>
    <string name="continent">Continent</string>
    <string name="is_capital_of">Is capital of</string>
    <string name="guess_flag">Flag of</string>
    <string name="user_did_not_have_trips">User did not have any trips yes</string>
    <string name="i_have_already_been">I have already been to</string>
    <string name="countries_exclamation_mark">counties!</string>
    <string name="challenge_me">Challenge me on  ScratchMyMap.com</string>
    <string name="scratch_my_map_com"><a href="https://www.scratchmymap.com/">ScratchMyMap.com \n Create your own scratch map</a></string>
    <string name="hi_see_my_visits">Hi,see my visits</string>
    <string name="this_is_all_countries_i_visited">This is all countries that I\'ve visited. Challenge me on ScratchMyMap %s</string>
    <string name="report_a_problem_ask_developers">Report a problem / Ask developers</string>
    <string name="help">Help</string>
    <string name="user_feedback">ScratchMyMap user feedback</string>
    <string name="help_me_with">"Hi, please help me with "</string>
    <string name="failed_to_load">Failed to load required information, please try again later</string>
    <string name="max_score">Max score:</string>
    <string name="logout_from_facebook">Log Out</string>
    <string name="account">Account</string>
    <string name="logout">Log Out</string>
    <string name="other">Other</string>
    <string name="policy">Policy</string>
    <string name="friend">Friend</string>
    <string name="comments">Comments</string>
    <string name="new_comments_on_your_post">New comments on your post</string>
    <string name="new_country">New country</string>
    <string name="you_are_in_a_new_county">You are in a new county</string>
    <string name="friend_joined_app_notification">friend joined app notification</string>
    <string name="notification">Notification</string>
    <string name="general_notification_trigger">General notification trigger</string>
    <string name="visit_web_version">Visit our web site</string>
    <string name="scratch_my_map_policy">ScratchMyMap policy</string>
    <string name="internet_connection_lost">Internet connection lost</string>
    <string name="internet_connection_required">Internet connection is required</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="lost_connection_with_location">Lost connection with Location Service</string>
    <string name="failed_to_define_location">Failed to define location</string>
    <string name="trip">"Trip "</string>
    <string name="developer_email" translatable="false">xajik0@gmail.com</string>
    <string name="send_email">Send email…</string>
    <string name="failed_to_dalete">"Failed to delete"</string>
    <string name="visit_deleted" formatted="false">"Visit %s to %s deleted"</string>
    <string name="travel_it">Travel it!</string>
    <string name="comment">Comment</string>
    <string name="visited_s_times">Visited: %d times</string>
    <string name="native_s">Native: %s</string>
    <string name="planing_s_times">Planing: %d times</string>
    <string name="living_s">Living: %s</string>
    <string name="popular_travelers">Popular travelers:</string>
    <string name="favourite_for">Favourite for:</string>
    <string name="native_for">Native for:</string>
    <string name="visited_by">Visited by:</string>
    <string name="planned_by">Planned by:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="you_are_not_authorized_to_see">This account is private, you are not authorized to view it</string>
    <string name="something_went_wrong_please_try_again">Something went wrong, please try again</string>
    <string name="require_write_permission">Share map feature requires \"write storage\" permission, please
    enable it in device settings</string>
    <string name="share_via">Send email…</string>
    <string name="rate_me_description">Are you enjoying ScratchMyMap? We hope Yes! Would you mind taking a moment to rate it? It would not take more than a minute. We appreciate your feedback and do our best to provide you the best experience</string>
    <string name="remind_me_later">Remind me later</string>
    <string name="no_thanks">No, thanks</string>
    <string name="rate_it_now">Rate it now</string>
    <string name="add_trip">Add a trip</string>
    <string name="today_at">Today at %s</string>
    <string name="yesterday_at">Yesterday at %s</string>
    <string name="edit">Edit</string>
    <string name="edit_visit">Edit visit</string>
    <string name="visit_edited">Visit edited</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="please_try_again_later">Failed to login, please try again later</string>
    <string name="rules">Rules</string>
    <string-array name="rules_title">
        <item>None selected</item>
        <item>Capital</item>
        <item>Area</item>
        <item>Is capital of</item>
        <item>Population</item>
        <item>Continent</item>
    </string-array>
    <string-array name="rules_content">
        <item>If you don\'t select any type of question we will randomly pick any of available</item>
        <item>Try to guess the capital of the specific country</item>
        <item>Try to guess the area of the specific country</item>
        <item>You have a town, try to guess capital of what country it is</item>
        <item>Try to guess the population of the specific country</item>
        <item>Try to guess the continent where country is situated</item>
    </string-array>

</resources>
