<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layer_background" />

    <include layout="@layout/layer_logo" />

    <LinearLayout
        android:id="@+id/menu_button_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/menu_play"
            style="@style/MenuButton"
            android:backgroundTint="@android:color/holo_blue_light"
            android:drawableStart="@drawable/ic_baseline_play_arrow_24px"
            android:text="@string/play" />

        <Button
            android:id="@+id/menu_rules"
            style="@style/MenuButton"
            android:backgroundTint="@android:color/holo_orange_light"
            android:drawableStart="@drawable/ic_baseline_help_24px"
            android:text="@string/rules" />

        <Button
            android:id="@+id/menu_discover"
            style="@style/MenuButton"
            android:backgroundTint="@android:color/holo_green_light"
            android:drawableStart="@drawable/ic_baseline_map_24px"
            android:text="@string/discover" />

    </LinearLayout>

    <include layout="@layout/layer_copyright" />

</android.support.constraint.ConstraintLayout>